# sat-solving

./: .gitignore  LICENSE  benchmark.csv  cabal.project  hie.yaml  sat-solving.cabal  shell.nix
app/: Main.hs
benchmarks/: Bench.hs
cnf-market/: cnf-market.cabal
cnf-market/app/: Main.hs
cnf-market/src/: Cnf.hs  CnfGen.hs  CnfPrint.hs  Ptn.hs  RandomSat.hs
plots/: Plots.r
src/: Muser.hs  QBFUnsatCore.hs  UnsatCore.hs
