cabal-version: 2.2
name:          sat-solving
version:       0.1.0.0
build-type:    Simple

common exts
  default-extensions:
    RecordWildCards
    LambdaCase
    BangPatterns

library
  import: exts
  exposed-modules:  UnsatCore, QBFUnsatCore

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , minisat
    , cnf-market
    , containers
    , unordered-containers
    , random

  hs-source-dirs:   src
  default-language: Haskell2010

executable sat-solving
  import: exts
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , sat-solving
    , cnf-market
    , random
    , text

  hs-source-dirs:   app
  default-language: Haskell2010
