cabal-version: 2.2
name:          sat-solving
version:       0.1.0.0
build-type:    Simple

common exts
  default-extensions:
    BangPatterns
    LambdaCase
    RecordWildCards

library
  import:           exts
  exposed-modules:
    Muser
    QBFUnsatCore
    UnsatCore

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , cnf-market
    , containers
    , minisat
    , process
    , random
    , text
    , unordered-containers

  hs-source-dirs:   src
  default-language: Haskell2010

benchmark sat-solving-benchmark
  import:           exts
  main-is:          Bench.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , cnf-market
    , criterion
    , random
    , sat-solving
    , stopwatch

  hs-source-dirs:   benchmarks
  default-language: Haskell2010
  type:             exitcode-stdio-1.0

executable sat-solving
  import:           exts
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , cnf-market
    , random
    , sat-solving
    , text

  hs-source-dirs:   app
  default-language: Haskell2010
