cabal-version: 1.12
name:          cnf-market
version:       0.1.0.0
description:
  Please see the README on Github at <https://github.com/githubuser/cnf-market#readme>

build-type:    Simple

library
  exposed-modules:
    Cnf
    CnfGen
    CnfPrint
    Ptn
    RandomSat

  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

  build-depends:
      base            >=4.7 && <5
    , classy-prelude
    , containers
    , digits
    , random

  default-language:   Haskell2010

executable cnf-market-exe
  main-is:            Main.hs
  other-modules:      Paths_cnf_market
  hs-source-dirs:     app
  default-extensions:
    NoImplicitPrelude
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                  >=4.7 && <5
    , classy-prelude
    , cnf-market
    , optparse-applicative
    , random

  default-language:   Haskell2010
